--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,20 @@
 ### YamlMime:Yaml
-ms.openlocfilehash: c673abced1f8dda8f33bb729f27f9a4e1efe482c
-ms.sourcegitcommit: 82f364d63269c277208cf43051f26cc26a25f1a4
-ms.translationtype: HT
-ms.contentlocale: de-DE
-ms.lasthandoff: 06/09/2021
-ms.locfileid: "111864042"
+
+
 trigger:
 - '*'
 pool:
   vmImage: ubuntu-20.04
   demands:
   - npm
+variables:
+  buildConfiguration: Release
 steps:
 - task: UseDotNet@2
-  displayName: Use .NET SDK 5.0
+  displayName: Use .NET SDK 5.x
   inputs:
-    version: 5.0.203
+    packageType: sdk
+    version: 5.x
 - task: Npm@1
   displayName: Run npm install
   inputs:
@@ -38,14 +37,3 @@ steps:
     command: build
     arguments: --no-restore --configuration Release
     projects: '**/*.csproj'
-- task: DotNetCoreCLI@2
-  displayName: Publish the project - Release
-  inputs:
-    command: publish
-    projects: '**/*.csproj'
-    publishWebProjects: false
-    arguments: --no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release
-    zipAfterPublish: true
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
-  condition: succeeded()
